feat: submit api request in html

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,22 @@
 </head>
 
 <body>
+	<form action="/moon" method='get'>
+		<label for="lang">language</label>
+		<select name="lang" id="" title='the language that the moon information will
+						be in.'>
+			<option value="en">English</option>
+		</select>
+		<label for="date">date</label>
+		<input type="date" name="date" id="" title='the date that the moon information will
+						be in.'>
+		<label for="location">location</label>
+		<select name="location" id="" title='the location where you want the Moon
+				information relevant to'>
+			<option value="BA333">London</option>
+		</select>
+		<input type="submit" value="submit">
+	</form>
 
 </body>
 
