--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Moon Info</title>
+	<link rel="stylesheet" href="style.css">
+	<script type='module' src="index.js" defer></script>
 </head>
 
 <body>
-	<form action="/moon" method='get'>
-		<input type="submit" value="submit">
-	</form>
-
+	<h1>Moon Info</h1>
+	<ul id='moon-data'>
+	</ul>
 </body>
 
 </html>
