--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Moon Info</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="manifest" href="manifest.json">
+	<link rel="stylesheet" href="">
+	<script defer>navigator.serviceWorker.register("./service-worker.js")</script>
 	<script type='module' src="index.js" defer></script>
 </head>
 
